--- a/index.css
+++ b/index.css
@@ -19,17 +19,19 @@ body{
       background-color: white;
  }
 
- .imagemprojeto{
- 	height: 300px;
- }
 
  .titulo{
- 	background-color: #FFFFFF;
- 	border: 1px solid #e7e7e7;
+ 	background-color: #e7e7e7;
+ 	border-top: 1px solid #8A8A8A;
+     border-bottom: 1px solid #8A8A8A;
  }
 
  .explicacao{
  	font-size: 12px;
+ }
+
+ .footer{
+ 	height: 70px;
  }
 
 </style>
